--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,8 +16,8 @@
                 "-lglut",
                 "-lstdc++",
                 "-lm",
-                "-lglfw",
-                "-lGLEW",
+                // "-lglfw",
+                // "-lGLEW",
                 "-ldl",
                 "-lpthread",
                 "-lgomp",
